[metadata]
name = libwine
version = 0.7
author = Mirko Brombin
author_email = send@mirko.pm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bottlesdevs/libwine
project_urls =
    Bug Tracker = https://github.com/bottlesdevs/libwine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
[options]
python_requires = >=3.6